--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.1.0",
+    "react-lottie": "^1.2.3",
     "react-scripts": "3.4.1"
   },
   "scripts": {
