--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
     "react-lottie": "^1.2.3",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-typical": "^0.1.3",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
