--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-animations": "^1.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
     "react-lottie": "^1.2.3",
+    "react-responsive-carousel": "^3.2.9",
     "react-scripts": "3.4.1",
     "react-typical": "^0.1.3",
     "styled-components": "^5.1.1"
